--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@heroicons/react": "^2.0.12",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
-    "chart.js": "^4.0.1",
+    "chart.js": "3.5",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.7.0",
     "next": "12.3.1",
