--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@heroicons/react": "^2.0.12",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
-    "chart.js": "3.5",
+    "chart.js": "^3.8.0",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.7.0",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
-    "react-chartjs-2": "^5.0.1",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-toastify": "^9.0.8"
