--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.8.0",
+    "cloudinary": "^1.30.0",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.7.0",
     "next": "12.3.1",
