--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^4.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
