--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.3.1",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
