--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.8.0",
     "cloudinary": "^1.30.0",
+    "easymde": "^2.18.0",
     "js-cookie": "^3.0.1",
+    "markdown-it": "^13.0.1",
     "mongoose": "^6.7.0",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
@@ -25,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-simplemde-editor": "^5.2.0",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
