--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "18.2.0",
+    "react-google-places-autocomplete": "^3.4.0",
     "react-hook-form": "^7.38.0",
     "react-responsive-carousel": "^3.2.23",
     "react-simplemde-editor": "^5.2.0",
