--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.8.0",
     "cloudinary": "^1.30.0",
+    "cookie": "^0.5.0",
     "easymde": "^2.18.0",
     "js-cookie": "^3.0.1",
     "markdown-it": "^13.0.1",
@@ -31,7 +33,8 @@
     "react-phone-number-input": "^3.2.19",
     "react-responsive-carousel": "^3.2.23",
     "react-simplemde-editor": "^5.2.0",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.0.8",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
