--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "chart.js": "^3.8.0",
     "cloudinary": "^1.30.0",
     "cookie": "^0.5.0",
+    "csv-parser": "^3.0.0",
     "easymde": "^2.18.0",
     "js-cookie": "^3.0.1",
     "markdown-it": "^13.0.1",
     "mongoose": "^6.7.0",
+    "multer": "^1.4.5-lts.1",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
@@ -41,7 +43,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-simplemde-editor": "^5.2.0",
     "react-toastify": "^9.0.8",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
