--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie": "^0.5.0",
     "csv-parser": "^3.0.0",
     "easymde": "^2.18.0",
+    "formidable": "^2.1.1",
     "js-cookie": "^3.0.1",
     "markdown-it": "^13.0.1",
     "mongoose": "^6.7.0",
