pages path and admin complete

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "csv-parser": "^3.0.0",
     "easymde": "^2.18.0",
     "formidable": "^2.1.1",
+    "he": "^1.2.0",
     "js-cookie": "^3.0.1",
     "markdown-it": "^13.0.1",
     "mongoose": "^6.7.0",
@@ -40,10 +41,13 @@
     "react-google-autocomplete": "^2.7.3",
     "react-google-places-autocomplete": "^3.4.0",
     "react-hook-form": "^7.38.0",
+    "react-markdown": "^8.0.7",
     "react-phone-number-input": "^3.2.19",
     "react-responsive-carousel": "^3.2.23",
     "react-simplemde-editor": "^5.2.0",
     "react-toastify": "^9.0.8",
+    "rehype-raw": "^6.1.1",
+    "unist-util-visit": "^4.1.2",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
   },
