--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^4.2.0",
@@ -43,6 +44,7 @@
     "react-hook-form": "^7.38.0",
     "react-markdown": "^8.0.7",
     "react-phone-number-input": "^3.2.19",
+    "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-simplemde-editor": "^5.2.0",
     "react-toastify": "^9.0.8",
