--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formidable": "^2.1.1",
     "he": "^1.2.0",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "mongoose": "^6.7.0",
     "multer": "^1.4.5-lts.1",
@@ -50,8 +51,7 @@
     "react-toastify": "^9.0.8",
     "rehype-raw": "^6.1.1",
     "unist-util-visit": "^4.1.2",
-    "uuid": "^9.0.0",
-    "xlsx": "^0.18.5"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
